Backend2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: recomendation-service-service
  namespace: backend-services
spec:
  selector:
    app: recomendation-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8002
  type: ClusterIP
